test: run Bazaar tests against real repository
Fixes #5035

Signed-off-by: Muhammet Enes Gül <enesgull@hotmail.com>